# Credits: Erwin Lejeune — 2026-02-22
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epsteinexposed"
version = "0.2.0"
description = "Unofficial Python client for the Epstein Exposed public API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Erwin Lejeune", email = "rangonomics@gmail.com"}
]
keywords = ["epstein", "api", "exposed", "documents", "flights", "public-records"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "curl_cffi>=0.14.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/guilyx/epsteinexposed"
Documentation = "https://guilyx.github.io/epsteinexposed"
Repository = "https://github.com/guilyx/epsteinexposed"
Issues = "https://github.com/guilyx/epsteinexposed/issues"
Changelog = "https://github.com/guilyx/epsteinexposed/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["epsteinexposed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=epsteinexposed",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests (hit real API)",
]

[tool.coverage.run]
source = ["epsteinexposed"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
